INCLUDE ("${SAC2C_SOURCE_DIR}/cmake/runtime/sac2c-variables.cmake")

# create directory
FILE (MAKE_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
SET (BINDIR "${PROJECT_BINARY_DIR}/bin")

ADD_EXECUTABLE (csima   ${CMAKE_CURRENT_SOURCE_DIR}/csima/csima.c)
SET_TARGET_PROPERTIES (csima
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${BINDIR}
    RUNTIME_OUTPUT_NAME csima${BUILD_TYPE_POSTFIX})

ADD_EXECUTABLE (csimt   ${CMAKE_CURRENT_SOURCE_DIR}/csimt/csimt.c)
SET_TARGET_PROPERTIES (csimt
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${BINDIR}
    RUNTIME_OUTPUT_NAME csimt${BUILD_TYPE_POSTFIX})
